--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "akparhi",
   "homepage": "",
   "repository": {
-    "url": ""
+    "url": "https://github.com/akparhi/queryframe"
   },
   "keywords": [
     "sdk builder",
