--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "noUncheckedIndexedAccess": true,
     "outDir": "dist"
   },
-  "include": ["src", "tsup.config.ts", "tests.ts"],
+  "include": ["src", "tsup.config.ts"],
   "exclude": ["node_modules"]
 }
